<resources>
    <string name="app_name">HardwareStoreAppMVVM</string>
    <string name="float_button">float_button</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="add_a_new_shopping_item">Add a new Shopping Item</string>
    <string name="delete">delete</string>
    <string name="minus">minus</string>
    <string name="plus">+</string>
    <string name="price">Price</string>
    <string name="amount_end">шт.</string>
    <string name="store_front">Store-Front</string>
    <string name="back_end">Back-End</string>
    <string name="buy">Buy</string>
    <string name="next">next</string>
</resources>