<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        style="@style/dialogTitle"
        android:text="@string/add_a_new_shopping_item"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        style="@style/dialogEditText"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

    <EditText
        android:id="@+id/editTextPrice"
        style="@style/dialogEditText"
        android:hint="@string/price"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextAmount"
        style="@style/dialogEditText"
        android:hint="@string/amount"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />


    <TextView
        android:id="@+id/textViewAdd"
        style="@style/dialogTextView"
        android:text="@string/add"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />

    <TextView
        android:id="@+id/textViewCancel"
        style="@style/dialogTextView"
        android:layout_marginEnd="@dimen/common_margin"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/textViewAdd"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />
</androidx.constraintlayout.widget.ConstraintLayout>