<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/detailsName"
        style="@style/frontMainText"
        android:gravity="center"
        tools:text="@string/name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/frontMainText"
            android:text="@string/price" />

        <TextView
            android:id="@+id/detailsPrice"
            style="@style/frontBaseText"
            tools:text="@string/price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/frontMainText"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/detailsAmount"
            style="@style/frontBaseText"
            tools:text="@string/amount" />
    </LinearLayout>

    <Button
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/common_margin"
        android:text="@string/buy" />

</LinearLayout>