<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/frontMainText"
            android:text="@string/name" />

        <TextView
            android:id="@+id/backEndName"
            style="@style/frontBaseText"
            tools:text="@string/name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/frontMainText"
            android:text="@string/price" />

        <TextView
            android:id="@+id/backEndPrice"
            style="@style/frontBaseText"
            tools:text="@string/price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/frontMainText"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/backEndAmount"
            style="@style/frontBaseText"
            tools:text="@string/amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <ImageView
            android:id="@+id/imageViewDelete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/common_margin"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:focusable="true"
            android:src="@drawable/ic_delete"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageViewPlus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/common_margin"
            android:clickable="true"
            android:contentDescription="@string/add"
            android:focusable="true"
            android:src="@drawable/ic_plus"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageViewMinus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/common_margin"
            android:clickable="true"
            android:contentDescription="@string/minus"
            android:focusable="true"
            android:src="@drawable/ic_minus"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

</LinearLayout>