<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/frontMainText"
            android:text="@string/name" />

        <TextView
            android:id="@+id/frontName"
            style="@style/frontBaseText"
            tools:text="@string/name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/frontMainText"
            android:text="@string/price" />

        <TextView
            android:id="@+id/backEndPrice"
            style="@style/frontBaseText"
            tools:text="@string/price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/frontMainText"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/backEndAmount"
            style="@style/frontBaseText"
            tools:text="@string/amount" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

</LinearLayout>