<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:layout_weight="8"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:layout_weight="8"
            android:text="@string/price"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:layout_weight="1"
            android:text="@string/price"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:layout_weight="8"
            android:text="@string/amount"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:layout_weight="1"
            android:text="@string/amount"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/common_margin"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:focusable="true"
            android:src="@drawable/ic_delete"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivPlus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/common_margin"
            android:clickable="true"
            android:contentDescription="@string/add"
            android:focusable="true"
            android:src="@drawable/ic_plus"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivMinus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/common_margin"
            android:clickable="true"
            android:contentDescription="@string/minus"
            android:focusable="true"
            android:src="@drawable/ic_minus"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

</LinearLayout>